--- a/src/pages/auth.html
+++ b/src/pages/auth.html
@@ -89,14 +89,83 @@
         };
     </script>
 
+    <style>
+        /* LOADER OVERLAY */
+        #loaderOverlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            background: #0A0A0A;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 50;
+            opacity: 0;
+            pointer-events: none;
+            transition: opacity 0.3s ease;
+        }
+
+        #loaderOverlay.active {
+            opacity: 1;
+            pointer-events: all;
+        }
+
+        /* LOADER ANIMATION */
+        .loader-svg polygon {
+            fill: #12E6E6;
+            animation: pulse 1.2s infinite ease-in-out;
+        }
+
+        #seg2 {
+            animation-delay: .2s
+        }
+
+        #seg3 {
+            animation-delay: .4s
+        }
+
+        @keyframes pulse {
+            0% {
+                opacity: 0;
+                transform: translateX(-10px);
+            }
+
+            50% {
+                opacity: 1;
+            }
+
+            100% {
+                opacity: 0;
+                transform: translateX(10px);
+            }
+        }
+    </style>
+
+    <!-- LOADER OVERLAY -->
+    <div id="loaderOverlay">
+        <svg class="loader-svg" width="120" viewBox="0 0 512 512">
+            <polygon id="seg1" points="120,120 360,120 320,160 160,160" />
+            <polygon id="seg2" points="300,160 340,200 220,340 180,300" />
+            <polygon id="seg3" points="160,340 320,340 360,380 120,380" />
+        </svg>
+    </div>
+
     <script>
         const continueBtn = document.getElementById('continueBtn');
+        const loaderOverlay = document.getElementById('loaderOverlay');
 
         continueBtn.addEventListener('click', function (e) {
-            e.preventDefault(); // form submit rokta hai
+            e.preventDefault();
 
-            // fake auth success
-            window.location.href = "feed.html";
+            // Show loader
+            loaderOverlay.classList.add('active');
+
+            // Delay for 2 seconds then redirect
+            setTimeout(() => {
+                window.location.href = "feed.html";
+            }, 2000);
         });
     </script>
 
