Implement Dark/Light theme toggle

--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -12,6 +12,7 @@
   <!-- Theme -->
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           colors: {
@@ -23,12 +24,13 @@
       }
     }
   </script>
+  <script src="../utils/theme.js"></script>
 </head>
 
-<body class="bg-dark text-white min-h-screen flex">
+<body class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex transition-colors duration-300">
 
   <!-- LEFT SIDEBAR -->
-  <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-800">
+  <aside class="hidden md:flex flex-col w-64 p-6 border-r border-gray-200 dark:border-gray-800">
     <h1 class="text-2xl font-bold text-zynk mb-8">ZYNK</h1>
 
     <nav class="space-y-4 text-gray-300">
@@ -36,16 +38,21 @@
       <a class="block hover:text-zynk">Explore</a>
       <a class="block hover:text-zynk">Profile</a>
       <a class="block hover:text-zynk">Settings</a>
+      <a class="block hover:text-zynk cursor-pointer">Settings</a>
+      <button id="themeToggle" class="flex items-center gap-2 hover:text-zynk transition mt-4">
+        <span id="themeIcon">🌙</span>
+        <span>Theme</span>
+      </button>
     </nav>
   </aside>
 
   <!-- MAIN FEED -->
-  <main class="flex-1 max-w-2xl mx-auto border-x border-gray-800">
+  <main class="flex-1 max-w-2xl mx-auto border-x border-gray-200 dark:border-gray-800">
 
     <!-- CREATE POST -->
-    <div class="p-6 border-b border-gray-800">
-      <textarea id="postInput" placeholder="Say something raw..." class="w-full bg-dark resize-none outline-none text-lg
-               placeholder-gray-500" rows="3"></textarea>
+    <div class="p-6 border-b border-gray-200 dark:border-gray-800">
+      <textarea id="postInput" placeholder="Say something raw..." class="w-full bg-transparent resize-none outline-none text-lg
+               placeholder-gray-500 text-gray-800 dark:text-white" rows="3"></textarea>
 
       <div class="flex justify-between items-center mt-4">
         <span id="charCount" class="text-sm text-gray-500">
@@ -60,7 +67,7 @@
     <div id="feedPosts">
       <!-- POST -->
       <div
-        class="post-card p-6 border-b border-gray-800 transition-all duration-300 ease-out hover:bg-[#141414] hover:-translate-y-0.5">
+        class="post-card p-6 border-b border-gray-200 dark:border-gray-800 transition-all duration-300 ease-out hover:bg-gray-100 dark:hover:bg-[#141414] hover:-translate-y-0.5">
         <div class="flex gap-4">
           <div class="w-10 h-10 rounded-full bg-gray-700"></div>
 
@@ -70,7 +77,7 @@
               <span class="text-sm text-gray-500">@anon</span>
             </div>
 
-            <p class="mt-2 text-gray-200">
+            <p class="mt-2 text-gray-800 dark:text-gray-200">
               ZYNK feels like what social media should have been.
             </p>
 
@@ -85,7 +92,7 @@
 
       <!-- POST -->
       <div
-        class="post-card p-6 border-b border-gray-800 transition-all duration-300 ease-out hover:bg-[#141414] hover:-translate-y-0.5">
+        class="post-card p-6 border-b border-gray-200 dark:border-gray-800 transition-all duration-300 ease-out hover:bg-gray-100 dark:hover:bg-[#141414] hover:-translate-y-0.5">
         <div class="flex gap-4">
           <div class="w-10 h-10 rounded-full bg-gray-700"></div>
 
@@ -95,7 +102,7 @@
               <span class="text-sm text-gray-500">@tx</span>
             </div>
 
-            <p class="mt-2 text-gray-200">
+            <p class="mt-2 text-gray-800 dark:text-gray-200">
               No filters. No noise. Just thoughts.
             </p>
 
@@ -112,7 +119,7 @@
   </main>
 
   <!-- RIGHT SIDEBAR -->
-  <aside class="hidden lg:block w-64 p-6 border-l border-gray-800">
+  <aside class="hidden lg:block w-64 p-6 border-l border-gray-200 dark:border-gray-800">
     <h2 class="font-semibold mb-4">Trending</h2>
 
     <ul class="space-y-3 text-gray-400">
@@ -148,7 +155,7 @@
       if (!text) return;
 
       const postHTML = `
-    <div class="post-card p-6 border-b border-gray-800 transition-all duration-300 ease-out hover:bg-[#141414] hover:-translate-y-0.5 animate-post">
+    <div class="post-card p-6 border-b border-gray-200 dark:border-gray-800 transition-all duration-300 ease-out hover:bg-gray-100 dark:hover:bg-[#141414] hover:-translate-y-0.5 animate-post">
       <div class="flex gap-4">
         <div class="w-10 h-10 rounded-full bg-gray-700"></div>
         <div>
@@ -156,7 +163,7 @@
             <span class="font-semibold">You</span>
             <span class="text-sm text-gray-500">@you</span>
           </div>
-          <p class="mt-2 text-gray-200">${text.replace(/\n/g, '<br>')}</p>
+          <p class="mt-2 text-gray-800 dark:text-gray-200">${text.replace(/\n/g, '<br>')}</p>
           <div class="flex gap-6 mt-4 text-gray-500 text-sm">
             <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer">Reply</span>
             <span class="hover:text-zynk transition transform hover:scale-105 cursor-pointer">Repost</span>
@@ -182,6 +189,22 @@
       setTimeout(() => {
         post.classList.add('animate-post');
       }, index * 80);
+    });
+
+    // Theme Toggle Logic
+    const themeToggle = document.getElementById('themeToggle');
+    const themeIcon = document.getElementById('themeIcon');
+
+    function updateIcon(isDark) {
+      themeIcon.textContent = isDark ? '🌙' : '☀️';
+    }
+
+    // Set initial icon
+    updateIcon(document.documentElement.classList.contains('dark'));
+
+    themeToggle.addEventListener('click', () => {
+      const isDark = theme.toggle();
+      updateIcon(isDark);
     });
   </script>
 
