--- a/src/pages/auth.html
+++ b/src/pages/auth.html
@@ -12,6 +12,7 @@
     <!-- Theme -->
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 extend: {
                     colors: {
@@ -24,11 +25,23 @@
         }
     </script>
 </head>
+<script src="../utils/theme.js"></script>
 
-<body class="bg-dark min-h-screen flex items-center justify-center text-white">
+<body
+    class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex items-center justify-center transition-colors duration-300 relative">
+
+    <!-- FLOATING THEME TOGGLE -->
+    <button id="themeToggle" class="absolute top-6 right-6 text-2xl hover:scale-110 transition">☀️</button>
+    <script>
+        const themeToggle = document.getElementById('themeToggle');
+        const updateIcon = (isDark) => themeToggle.textContent = isDark ? '🌙' : '☀️';
+        updateIcon(document.documentElement.classList.contains('dark'));
+        themeToggle.onclick = () => updateIcon(theme.toggle());
+    </script>
 
     <!-- AUTH CARD -->
-    <div class="bg-card w-full max-w-md p-8 rounded-2xl border border-gray-800">
+    <div
+        class="bg-white dark:bg-card w-full max-w-md p-8 rounded-2xl border border-gray-200 dark:border-gray-800 transition-colors duration-300">
 
         <!-- LOGO / TITLE -->
         <h1 class="text-3xl font-bold text-center mb-2">
@@ -39,8 +52,9 @@
         </p>
 
         <!-- TOGGLE -->
-        <div class="flex mb-6 bg-dark rounded-xl p-1">
-            <button id="loginTab" class="w-1/2 py-2 rounded-lg bg-zynk text-black font-semibold">
+        <div class="flex mb-6 bg-gray-100 dark:bg-dark rounded-xl p-1 transition-colors duration-300">
+            <button id="loginTab"
+                class="w-1/2 py-2 rounded-lg bg-zynk text-black font-semibold shadow-sm transition-all">
                 Login
             </button>
             <button id="signupTab" class="w-1/2 py-2 rounded-lg text-gray-400">
@@ -51,11 +65,11 @@
         <!-- FORM -->
         <form id="authForm" class="space-y-4">
 
-            <input type="text" placeholder="Username" class="w-full px-4 py-3 rounded-xl bg-dark border border-gray-700
-               focus:outline-none focus:border-zynk" />
+            <input type="text" placeholder="Username" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
+               focus:outline-none focus:border-zynk transition-colors text-gray-900 dark:text-white" />
 
-            <input type="password" placeholder="Password" class="w-full px-4 py-3 rounded-xl bg-dark border border-gray-700
-               focus:outline-none focus:border-zynk" />
+            <input type="password" placeholder="Password" class="w-full px-4 py-3 rounded-xl bg-gray-50 dark:bg-dark border border-gray-300 dark:border-gray-700
+               focus:outline-none focus:border-zynk transition-colors text-gray-900 dark:text-white" />
 
             <button id="continueBtn" class="w-full bg-zynk text-black py-3 rounded-xl font-semibold
                hover:opacity-90 transition">
