--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <title>ZYNK — Say it. Sync it.</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
@@ -11,6 +12,7 @@
   <!-- Custom theme -->
   <script>
     tailwind.config = {
+      darkMode: 'class',
       theme: {
         extend: {
           colors: {
@@ -22,18 +24,29 @@
       }
     }
   </script>
+  <script src="../utils/theme.js"></script>
 </head>
 
-<body class="bg-dark text-white min-h-screen flex flex-col">
+<body
+  class="bg-gray-50 text-gray-900 dark:bg-dark dark:text-white min-h-screen flex flex-col transition-colors duration-300">
 
   <!-- NAVBAR -->
   <nav class="flex justify-between items-center px-8 py-6">
     <div class="text-2xl font-bold text-zynk">ZYNK</div>
-    <a href="auth.html"
-       class="text-sm text-gray-300 hover:text-zynk transition">
-       Login
-    </a>
+    <div class="flex items-center gap-6">
+      <button id="themeToggle" class="text-xl hover:text-zynk transition">☀️</button>
+      <a href="auth.html" class="text-sm text-gray-500 hover:text-zynk transition">
+        Login
+      </a>
+    </div>
   </nav>
+
+  <script>
+    const themeToggle = document.getElementById('themeToggle');
+    const updateIcon = (isDark) => themeToggle.textContent = isDark ? '🌙' : '☀️';
+    updateIcon(document.documentElement.classList.contains('dark'));
+    themeToggle.onclick = () => updateIcon(theme.toggle());
+  </script>
 
   <!-- HERO SECTION -->
   <main class="flex-1 flex flex-col justify-center items-center text-center px-6">
@@ -48,15 +61,13 @@
     </p>
 
     <div class="mt-10 flex gap-4">
-      <a href="auth.html"
-         class="bg-zynk text-black px-8 py-3 rounded-xl font-semibold
+      <a href="auth.html" class="bg-zynk text-black px-8 py-3 rounded-xl font-semibold
                 hover:opacity-90 transition">
         Get Started
       </a>
 
-      <a href="#"
-         class="border border-gray-600 px-8 py-3 rounded-xl
-                text-gray-300 hover:border-zynk hover:text-zynk transition">
+      <a href="#" class="border border-gray-400 dark:border-gray-600 px-8 py-3 rounded-xl
+                text-gray-600 dark:text-gray-300 hover:border-zynk hover:text-zynk transition">
         Learn More
       </a>
     </div>
@@ -69,4 +80,5 @@
   </footer>
 
 </body>
+
 </html>
