Add Chat option to Feed sidebar

--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -36,6 +36,7 @@
     <nav class="space-y-4 text-gray-300">
       <a class="block hover:text-zynk">Feed</a>
       <a class="block hover:text-zynk">Explore</a>
+      <a href="chat.html" class="block hover:text-zynk">Chat</a>
       <a class="block hover:text-zynk">Profile</a>
 
       <a class="block hover:text-zynk cursor-pointer">Settings</a>
