--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -37,6 +37,7 @@
       <a class="block hover:text-zynk">Feed</a>
       <a class="block hover:text-zynk">Explore</a>
       <a href="chat.html" class="block hover:text-zynk">Chat</a>
+      <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
       <a class="block hover:text-zynk">Profile</a>
 
       <a class="block hover:text-zynk cursor-pointer">Settings</a>
