--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Chat</title>
+    <title>ZYNK — Notifications</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -36,8 +36,8 @@
         <nav class="space-y-4 text-gray-300">
             <a href="feed.html" class="block hover:text-zynk">Feed</a>
             <a class="block hover:text-zynk">Explore</a>
-            <a href="chat.html" class="block text-zynk font-semibold">Chat</a>
-            <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
+            <a href="chat.html" class="block hover:text-zynk">Chat</a>
+            <a href="notifications.html" class="block text-zynk font-semibold">Notifications</a>
             <a class="block hover:text-zynk">Profile</a>
 
             <a class="block hover:text-zynk cursor-pointer">Settings</a>
@@ -52,10 +52,9 @@
     <!-- MAIN AREA -->
     <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
         <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Chat <span class="text-zynk">Coming Soon</span></h2>
+            <h2 class="text-3xl font-bold mb-4">Notifications <span class="text-zynk">Coming Soon</span></h2>
             <p class="text-gray-500 dark:text-gray-400 mb-8">
-                We're building a seamless, encrypted messaging experience just for you.
-                Stay tuned.
+                Stay updated with likes, replies, and reposts. The notification center is under construction.
             </p>
 
             <a href="feed.html"
