--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -38,6 +38,7 @@
       <a class="block hover:text-zynk">Explore</a>
       <a href="chat.html" class="block hover:text-zynk">Chat</a>
       <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
+      <a href="topics.html" class="block hover:text-zynk">Topics</a>
       <a class="block hover:text-zynk">Profile</a>
 
       <a class="block hover:text-zynk cursor-pointer">Settings</a>
