--- a/src/pages/bookmarks.html
+++ b/src/pages/bookmarks.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Topics</title>
+    <title>ZYNK — Bookmarks</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -38,8 +38,8 @@
             <a class="block hover:text-zynk">Explore</a>
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
             <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
-            <a href="topics.html" class="block text-zynk font-semibold">Topics</a>
-            <a href="bookmarks.html" class="block hover:text-zynk">Bookmarks</a>
+            <a href="topics.html" class="block hover:text-zynk">Topics</a>
+            <a href="bookmarks.html" class="block text-zynk font-semibold">Bookmarks</a>
             <a class="block hover:text-zynk">Profile</a>
 
             <a class="block hover:text-zynk cursor-pointer">Settings</a>
@@ -54,9 +54,9 @@
     <!-- MAIN AREA -->
     <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
         <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Topics <span class="text-zynk">Coming Soon</span></h2>
+            <h2 class="text-3xl font-bold mb-4">Bookmarks <span class="text-zynk">Coming Soon</span></h2>
             <p class="text-gray-500 dark:text-gray-400 mb-8">
-                Dive into trending discussions and communities. We're curating the best for you.
+                Save your favorite posts and threads. Your personal collection is being built.
             </p>
 
             <a href="feed.html"
