--- a/src/pages/notifications.html
+++ b/src/pages/notifications.html
@@ -39,6 +39,7 @@
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
             <a href="notifications.html" class="block text-zynk font-semibold">Notifications</a>
             <a href="topics.html" class="block hover:text-zynk">Topics</a>
+            <a href="bookmarks.html" class="block hover:text-zynk">Bookmarks</a>
             <a class="block hover:text-zynk">Profile</a>
 
             <a class="block hover:text-zynk cursor-pointer">Settings</a>
