Add More option and placeholder page, sync sidebars

--- a/src/pages/more.html
+++ b/src/pages/more.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Notifications</title>
+    <title>ZYNK — More</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -37,11 +37,11 @@
             <a href="feed.html" class="block hover:text-zynk">Feed</a>
             <a href="explore.html" class="block hover:text-zynk">Explore</a>
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
-            <a href="notifications.html" class="block text-zynk font-semibold">Notifications</a>
+            <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
             <a href="topics.html" class="block hover:text-zynk">Topics</a>
             <a href="bookmarks.html" class="block hover:text-zynk">Bookmarks</a>
             <a href="profile.html" class="block hover:text-zynk">Profile</a>
-            <a href="more.html" class="block hover:text-zynk">More</a>
+            <a href="more.html" class="block text-zynk font-semibold">More</a>
 
             <a class="block hover:text-zynk cursor-pointer">Settings</a>
             <a href="auth.html" class="block hover:text-red-500 cursor-pointer transition text-red-400">Logout</a>
@@ -55,9 +55,9 @@
     <!-- MAIN AREA -->
     <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
         <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Notifications <span class="text-zynk">Coming Soon</span></h2>
+            <h2 class="text-3xl font-bold mb-4">More <span class="text-zynk">Coming Soon</span></h2>
             <p class="text-gray-500 dark:text-gray-400 mb-8">
-                Stay updated with likes, replies, and reposts. The notification center is under construction.
+                Lists, Analytics, Professional Tools, and more extra features will live here.
             </p>
 
             <a href="feed.html"
