--- a/src/pages/topics.html
+++ b/src/pages/topics.html
@@ -35,12 +35,13 @@
 
         <nav class="space-y-4 text-gray-300">
             <a href="feed.html" class="block hover:text-zynk">Feed</a>
-            <a class="block hover:text-zynk">Explore</a>
+            <a href="explore.html" class="block hover:text-zynk">Explore</a>
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
             <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
             <a href="topics.html" class="block text-zynk font-semibold">Topics</a>
             <a href="bookmarks.html" class="block hover:text-zynk">Bookmarks</a>
-            <a class="block hover:text-zynk">Profile</a>
+            <a href="profile.html" class="block hover:text-zynk">Profile</a>
+            <a href="more.html" class="block hover:text-zynk">More</a>
 
             <a class="block hover:text-zynk cursor-pointer">Settings</a>
             <a href="auth.html" class="block hover:text-red-500 cursor-pointer transition text-red-400">Logout</a>
