Add Settings placeholder page and link in sidebars

--- a/src/pages/feed.html
+++ b/src/pages/feed.html
@@ -43,7 +43,7 @@
       <a href="profile.html" class="block hover:text-zynk">Profile</a>
       <a href="more.html" class="block hover:text-zynk">More</a>
 
-      <a class="block hover:text-zynk cursor-pointer">Settings</a>
+      <a href="settings.html" class="block hover:text-zynk">Settings</a>
       <a href="auth.html" class="block hover:text-red-500 cursor-pointer transition text-red-400">Logout</a>
       <button id="themeToggle" class="flex items-center gap-2 hover:text-zynk transition mt-4">
         <span id="themeIcon">🌙</span>
