--- a/src/pages/settings.html
+++ b/src/pages/settings.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ZYNK — Topics</title>
+    <title>ZYNK — Settings</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Tailwind CDN -->
@@ -38,12 +38,12 @@
             <a href="explore.html" class="block hover:text-zynk">Explore</a>
             <a href="chat.html" class="block hover:text-zynk">Chat</a>
             <a href="notifications.html" class="block hover:text-zynk">Notifications</a>
-            <a href="topics.html" class="block text-zynk font-semibold">Topics</a>
+            <a href="topics.html" class="block hover:text-zynk">Topics</a>
             <a href="bookmarks.html" class="block hover:text-zynk">Bookmarks</a>
             <a href="profile.html" class="block hover:text-zynk">Profile</a>
             <a href="more.html" class="block hover:text-zynk">More</a>
 
-            <a href="settings.html" class="block hover:text-zynk">Settings</a>
+            <a href="settings.html" class="block text-zynk font-semibold">Settings</a>
             <a href="auth.html" class="block hover:text-red-500 cursor-pointer transition text-red-400">Logout</a>
             <button id="themeToggle" class="flex items-center gap-2 hover:text-zynk transition mt-4">
                 <span id="themeIcon">🌙</span>
@@ -55,9 +55,9 @@
     <!-- MAIN AREA -->
     <main class="flex-1 flex flex-col justify-center items-center p-6 text-center">
         <div class="max-w-md">
-            <h2 class="text-3xl font-bold mb-4">Topics <span class="text-zynk">Coming Soon</span></h2>
+            <h2 class="text-3xl font-bold mb-4">Settings <span class="text-zynk">Coming Soon</span></h2>
             <p class="text-gray-500 dark:text-gray-400 mb-8">
-                Dive into trending discussions and communities. We're curating the best for you.
+                Manage your account, privacy, and preferences. We're adding more controls soon.
             </p>
 
             <a href="feed.html"
